samples/_failures_safe/1761416904_b8f784_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fec5f6d3.c: In function ‘print_token_type’:
./samples/SAFE/__tmp_fec5f6d3.c:165:9: error: expected declaration or statement at end of input
  165 |         case TOKEN_IDENTIFIER: printf("IDENTIFIER");
      |         ^~~~
./samples/SAFE/__tmp_fec5f6d3.c:165:9: error: expected declaration or statement at end of input
